...

              ElevatedButton(
                onPressed: () {
                  _sendOtp();
                  _startTimer(); // Start the countdown timer
                },
                child: Text('Send OTP'),
              ),

              SizedBox(height: 20),
              TextField(
                controller: _otpController,
                keyboardType: TextInputType.number,
...
                  color: _remainingTime > 0 ? Colors.grey : Colors.red,
                ),
              ),
              SizedBox(height: 20),
              ElevatedButton(
                onPressed: _verifyOtp,
                child: Text('Verify OTP'),
              ),
            ],
          ),
        ),
      ),
    ));
...
